k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: streamshield-postgres
  namespace: streamshield
  labels:
    app: streamshield-postgres
spec:
  serviceName: streamshield-postgres
  replicas: 1
  selector:
    matchLabels:
      app: streamshield-postgres
  template:
    metadata:
      labels:
        app: streamshield-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U streamshield_admin -d streamshield_db
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U streamshield_admin -d streamshield_db
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
