k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamshield-postgres
  namespace: streamshield
  labels:
    app: streamshield-postgres
spec:
  type: ClusterIP
  selector:
    app: streamshield-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
